# commonlibsse-ng-submodule-template

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml  update_submodules.yml
cmake/: CLIBNGPlugin.cmake  Plugin.h.in
include/: PCH.h
src/: main.cpp
